--- a/src/views/dashboard/dashboard.html
+++ b/src/views/dashboard/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SITSS</title>
-    <script type="module" src="src/dahsboard.js"></script>
+    <script type="module" src="dahsboard.js"></script>
 </head>
 <body>
     <dashboard-main></dashboard-main>
